[net]
git-fetch-with-cli = true

[package]
name = "my_rust_egui_app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

rfd = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"